# hpr

./: CMakeLists.txt  Gaussian_NB_classifier.p  README.md  README.md~  annotate.py  annotate_for_metrics.py  bag2mat.py  change_log.txt  change_log.txt~  classification_results.mat  full_set_annotations.mat  hpr.py  hpr.py~  hpr_fin.py  hpr_mat.py  hpr_test.py  hpr_with_metric.py  hpr_with_metrics.py  ideal_data.mat  merge_train.py  mytools.py  offline_test.py  offline_test_with_metrics.py  offline_train.py  offline_train_2.py  online_calibration_node.py  optimal_test.py  package.xml  recognition_procedure.py  update_classifier.py
cluster_labels/: video2_labels.mat  video4_labels.mat
config/: viz_param.yaml
hpr_viz/: CMakeLists.txt  package.xml
hpr_viz/config/: parameters.yaml
hpr_viz/launch/: viz.launch
hpr_viz/src/: viz.hpr  viz_hpr.py
human_pattern_recognition/: CMakeLists.txt  package.xml
human_pattern_recognition/launch/: hpr.launch
human_pattern_recognition/scripts/: .hpr.py.swp  bag2mat.py  gridfit.py  hpr.py  merge_train.py  myhog.py
human_pattern_recognition/scripts/cluster_labels/: GaussianNB_classifier.p  SVM_classifier.p  video1_labels.mat  video3_labels.mat  video5_labels.mat
human_pattern_recognition/scripts/my_skimage/feature/: _hog.py
laser_analysis/: CMakeLists.txt  package.xml
laser_analysis/classification_files/: LDA_classifier.p  PCA_object.p
laser_analysis/config/: parameters.yaml  parameters_URG-04LX-UG01.yaml
laser_analysis/launch/: analysis.launch  walk_analysis.launch
laser_analysis/msg/: Analysis4MetersMsg.msg  HumanPredictionMsg.msg
laser_analysis/src/: analysis.py  hpr.py  walk_analysis.py  walk_track.py
laser_analysis/src/my_skimage/: version.py
laser_clustering/: CMakeLists.txt  package.xml
laser_clustering/config/: parameters.yaml
laser_clustering/launch/: clustering.launch
laser_clustering/msg/: ClusterLabelsMsg.msg  ClustersMsg.msg
laser_clustering/src/: clustering.py  my_cluster.py  mytools.py  online_clustering.py
laser_overlap_trace/: CMakeLists.txt  package.xml
laser_overlap_trace/config/: parameters.yaml  parameters_URG-04LX-UG01.yaml
laser_overlap_trace/launch/: overlap_trace.launch
laser_overlap_trace/src/: hpr_track.py  hungarian.py  overlap_trace.py
laser_wall_extraction/: CMakeLists.txt  package.xml
laser_wall_extraction/config/: parameters.yaml  parameters_URG-04LX-UG01.yaml
laser_wall_extraction/launch/: wall_extraction.launch
laser_wall_extraction/msg/: BufferMsg.msg  WallVizMsg.msg
laser_wall_extraction/src/: wall_extraction.py
launch/: hpr.launch  hpr_test.launch
scripts/: generate_metrics.py  hpr.py  my_cluster.py  online_clustering.py
testdata/: video14.bag
video/: Gaussian_NB_classifier_merged.p  PCA_object.p  annotations_merged.p  traindata_merged.p  video1Gaussian_NB_classifier.p  video1_training.mat  video1annotations.p  video1traindata.p  video1wall.p  video1z_score.p  video2Gaussian_NB_classifier.p  video2_training.mat  video2annotations.p  video2traindata.p  video2wall.p  video2z_score.p
