<?xml version="1.0"?>
<package format="2">
  <name>hpr</name>
  <version>0.1.0</version>
  <description>The hpr meta-package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>laserscan_stacker</depend>
  <depend>pointcloud2_segments_viz</depend>

  <export>
  </export>
</package>
